tests/comp/sem/invalid/assign_to_rvalue-3.mj
class A {

	public boolean test(int a) {
		/*** (a = a) = 3; ***/
	}

	public static void main(String[] args) {
	}

}
